@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-03-29T08:23:13Z",
+  "timestamp" : "2022-04-03T01:38:00Z",
   "count_outdated" : 34,
   "uniques_outdated" : 8,
-  "count" : 47,
-  "uniques" : 11,
+  "count" : 49,
+  "uniques" : 12,
   "views" : [
     {
       "timestamp": "2022-03-28T00:00:00Z",
@@ -16,6 +16,13 @@
       "timestamp": "2022-03-29T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-02T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
