@@ -1,5 +1,5 @@
 {
-  "count": 13,
+  "count": 15,
   "uniques": 2,
   "views": [
     {
@@ -10,6 +10,11 @@
     {
       "timestamp": "2022-03-29T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-02T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
