@@ -1,3 +1,9 @@
+2022-04-03T01:38:00Z:
+* notice: last 14d: all unq: 15 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 34 8 / 47 11
+* notice: next accum: outdated-all outdated-unq / all unq: 34 8 / 49 12
+* notice: prev json diff // prev day diff: unq all: +1 +2 / -0 -0 // +1 +2 / -0 -0
+
 2022-03-29T08:23:13Z:
 * notice: last 14d: all unq: 13 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 34 8 / 46 10
